--- a/var/httpd/htdocs/js/test/JSUnitTest.html
+++ b/var/httpd/htdocs/js/test/JSUnitTest.html
@@ -48,6 +48,11 @@
     <script type="text/javascript">
         Core.AJAX.RunUnitTests();
     </script>
+    <script type="text/javascript" src="../Core.App.js"></script>
+    <script type="text/javascript" src="Core.App.UnitTest.js"></script>
+    <script type="text/javascript">
+        Core.App.RunUnitTests();
+    </script>
     <script type="text/javascript" src="../Core.UI.Accessibility.js"></script>
     <script type="text/javascript" src="Core.UI.Accessibility.UnitTest.js"></script>
     <script type="text/javascript">
